# openrvdas

./: .flake8  .gitignore  .gitmodules  .install_timescaledb_grafana_preferences  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README  README.md  cached_data_server.py  delta_transform.py  manage.py  nbp1700_cruise.json  nmea_checksum_transform.py  openrvdas_cli.py  pyproject.toml  test_nmea_checksum_transform.py  true_winds_cruise.json  ttyclient  ttydevice
contrib/: README  README.md
database/: README.md  install_mysql.sh  mongo_connector.py  mongo_record_connector.py  mongo_settings.py.dist  mysql_connector.py  mysql_record_connector.py  postgresql_connector.py  postgresql_record_connector.py  settings.py  settings.py.dist  setup_mongo_connector.sh  setup_mysql_connector.sh  setup_postgresql_connector.sh  test_mongo_connector.py  test_mongo_record_connector.py  test_mysql_connector.py  test_mysql_record_connector.py  test_postgresql_connector.py
display/: README.md
django_gui/: README.md  admin.py  api_views.py  apps.py  django_server_api.py  logger_server.py  models.py  run_servers.py  serializers.py  settings.py  settings.py.dist  status_server.py  test_django_server_api.py  urls.py  views.py  wsgi.py
docs/: INSTALL.md  OpenRVDAS_Primer.md  README.md  cached_data_server.md  components.md  configuration_files.md  controlling_loggers.md  derived_data.md  display_widgets.md  django_interface.md  generate_html_docs.sh  geofence.md  grafana_displays.md  intro_and_overview.md  intro_to_loggers.md  listen_py.md  nmea_parser.md  parsing.md  quickstart.md  quickstart_gui.md  requirements-docs.txt  secure_websockets.md  security.md  simulating_live_data.md  simulating_serial_input.md  tutorial_all_in_one.md
gui/: README.md  admin.py  display_server.py  django_run_loggers.py  django_server_api.py  logger_server.py  models.py  run_servers.py  settings.py  status_server.py  test_django_server_api.py  urls.py  views.py  wsgi.py
hapi/: hapi_server_api.py  settings.py.dist
listeners/: simple_listener.py
local/: README.md  blank_cruise.yaml
logger/: settings.py.dist
manager/: admin.py  build_config.py  django_logger_runner.py  django_run_loggers.py  models.py  run_loggers.py  status_server.py  urls.py  views.py  (+2 more)
(+1272 files in other folders)
